Fix bug with spacing between projects

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -84,7 +84,6 @@ body {
 }
 
 .app-footer {
-	margin-top: 40px;
 	padding-bottom: 16px;
 	text-align: right;
 
