--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -1,4 +1,5 @@
 .project {
+	margin-bottom: 40px;
 	overflow: hidden;
 	@include box_shadow(0, 1px, 5px, rgba(0,0,0,0.25));
 	@include border_radius(6px);
